--- a/jenkinsfile
+++ b/jenkinsfile
@@ -11,7 +11,7 @@ pipeline {
         stage('Build Image') {
             steps {
                 // --no-cache: Ignores previous build layers, forcing a clean compile of your Go app
-                sh 'docker-compose build --no-cache monitor-dashboard'
+                sh 'docker compose build --no-cache monitor-dashboard'
             }
         }
         
@@ -19,10 +19,10 @@ pipeline {
             steps {
                 // --force-recreate: Kills the old container and starts a new one 
                 // even if the configuration/image ID appears to be the same.
-                sh 'docker-compose up -d --force-recreate monitor-dashboard'
+                sh 'docker compose up -d --force-recreate monitor-dashboard'
                 
                 // Also refresh your static-site to ensure the invitation changes apply
-                sh 'docker-compose up -d --force-recreate static-site'
+                sh 'docker compose up -d --force-recreate static-site'
             }
         }
         
