--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,13 +11,12 @@ services:
 
 
   static-site:
-    image: nginx:latest
+    build:
+      context: ./invitation
+      dockerfile: Dockerfile
     container_name: web-server-independent
     ports:
       - "8081:80"  # Map your PC's port 8081 to Nginx's port 80
-    volumes:
-      # Maps your subfolder invitation/index.html to Nginx's default root
-      - ./invitation/index.html:/usr/share/nginx/html/index.html:ro
     restart: always
 
   jenkins:
